# TechniZlecenia

./: BACKEND_CHANGES_REQUIRED.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  README.md  SSH_TUNNEL_IMPLEMENTATION.md  STATIC_FILES_FIX.md  deploy-all.sh  deploy-api.sh  deploy-web.sh  deploy.md  deploy.sh  dev-prepare.sh  docker-compose.yml  ecosystem.config.js  fix-404.sh  fix-deployment.sh  nginx-config.conf  nginx-ssl.conf  nginx-static-trick.conf  package-lock.json  setup-server.sh  techni-zlecenia.service
api/: .env  .gitignore  Cargo.toml  Dockerfile  MIGRATION_INSTRUCTIONS.md  api_build.sh
api/.sqlx/: query-2226b608de5b8b28bc3b7d540e62d998d87289008e921b1ec1c4621b5a0f73a8.json  query-3cbb740dffe38086bc8653d4b8c54326bb7ef580b4d54d7e63d85bf14a89b807.json  query-5b1eca387a2bd0a3d2f707cbac3aa612d617d284d013bb9c96153817b700e5d0.json  query-65adff3b3c94086881614ffa7d5cb22fdb2c3d36c03420222d3779df40f44615.json  query-9d7a18f00ec21948029dd919ae129abe1a6a5e398d615c6a8601e20f1855727b.json  query-a5e57d5467e9b8aa67fe7e3c5c9a7867041f841736ccca6c4e1296bea2561f3e.json  query-b078ec71d604b4c82718f72053365a5af9830170fffcf11ef0e91e099d858068.json  query-cf703ee6cb4f4114c643231d70f74ed1de550475cb153dadbf2b6965e8b4dbfb.json  query-d6f73bbb1fe021f9ae7397d102ec841fdc05e7bcf775b4606a70a62b1bdfd272.json  query-e044c629f71032ef97ca17e1c87e4134ee6bcf42902b24b39df1cb056998eb41.json  query-e549fdad1ec96182a9db8a4b920d4ccab6265552470ff6886ce484ecb9c89eba.json  query-f50ef8da545428330aa33ef450b7b850c7293489dccd91f678386e11bacb7cf3.json
api/mig/: 20250917132601_post.up.sql  (+2 more)
api/scripts/: db.sh  (+1 more)
(+94 files in other folders)
